# BGP

./: CMakeLists.txt  FBGenCMakeBuildInfo.cmake
.github/workflows/: build.yml
neteng/fboss/bgp/cpp/: BgpConfigValidator.cpp  BgpProfiler.cpp  BgpProfiler.h  BgpServiceBase.cpp  BgpServiceBase.h  BgpServiceDC.cpp  BgpServiceDC.h  BgpServiceEventHandler.cpp  BgpServiceEventHandler.h  BgpServiceStream.cpp  BgpServiceStream.h  BgpServiceUtil.cpp  BgpServiceUtil.h  MainOSS.cpp  MainUtil.h  ScubaLoggerFactory.cpp  bgpd.service
neteng/fboss/bgp/cpp/adjrib/: AdjRib.cpp  AdjRib.h  AdjRibCommon.cpp  AdjRibCommon.h  AdjRibEntry.h  AdjRibGroup.cpp  AdjRibGroup.h  AdjRibGroupSerializer.cpp  AdjRibGroupSerializer.h  AdjRibIn.cpp  AdjRibOut.cpp  AdjRibPolicyCache.cpp  AdjRibPolicyCache.h  AdjRibShow.cpp  AdjRibStats.cpp  AdjRibStats.h  AdjRibStructs.cpp  AdjRibStructs.h  AdjRibUtil.cpp  PathIdGenerator.cpp  PathIdGenerator.h  RouteFilterLogger.cpp  RouteFilterLogger.h  ShadowRibTypes.h  UpdateGroupManager.cpp  UpdateGroupManager.h  WellKnownCommunityFilter.cpp  WellKnownCommunityFilter.h
neteng/fboss/bgp/cpp/changeTracker/: ChangeItem.h  ChangeTracker.h  ChangeTrackerDebug.cpp  ChangeTrackerDebug.h  Consumer.h  ConsumerBitManager.cpp  ConsumerBitManager.h  ConsumerBitmap.h  TrackableObject.h
neteng/fboss/bgp/cpp/common/: BgpError.h  BgpModuleBase.cpp  BgpModuleBase.h  BgpPath.cpp  BgpPath.h  BuildInfo.cpp  BuildInfo.h  CMakeBuildInfo.h  Consts.h  EvbUtils.h  FeatureFlags.cpp  FeatureFlags.h  RibMessage.h  RouteInfo.cpp  RouteInfo.h  Structs.h  ThriftClientUtils.h  Types.h  Utils.cpp  Utils.h
neteng/fboss/bgp/cpp/config/: Config.cpp  Config.h  ConfigManager.cpp  ConfigManager.h  ConfigStructs.cpp  ConfigStructs.h  ConfigUtils.cpp  ConfigUtils.h  ThriftServerUtils.h
neteng/fboss/bgp/cpp/eos_wrapper/: BgpCli.py  BgpCli.yaml
neteng/fboss/bgp/cpp/fsdb/: FsdbSyncer.cpp  FsdbSyncer.h
neteng/fboss/bgp/cpp/health/: HealthValidator.cpp  HealthValidator.h
neteng/fboss/bgp/cpp/lib/: BgpAttributesSmartSet.cpp  BgpAttributesSmartSet.h  BgpAttributesWrapper.cpp  BgpAttributesWrapper.h  BgpException.h  BgpMessageParser.cpp  BgpMessageParser.h  BgpMessageSerializer.cpp  BgpMessageSerializer.h  BgpStructs.cpp  BgpStructs.h  BgpUtil.cpp  BgpUtil.h  DeDuplicator.h
neteng/fboss/bgp/cpp/nexthopTracker/: FsdbFibWatcher.cpp  FsdbFibWatcher.h  InterfaceEntry.cpp  InterfaceEntry.h  InterfacePrefixTable.h  NexthopAssociationList.h  NexthopCache.cpp  NexthopCache.h  NexthopHandler.cpp  NexthopHandler.h  NexthopInfo.h  NexthopInfoBase.h  NexthopStatus.h  Utils.h
neteng/fboss/bgp/cpp/peer/: NeighborWatcher.cpp  NeighborWatcher.h  PeerManager.cpp  PeerManager.h  PeerManagerBase.cpp  PeerManagerBase.h  PeerManagerUtils.cpp  SessionManager.cpp  SessionManager.h
neteng/fboss/bgp/cpp/policy/: Policy.cpp  Policy.h  PolicyAction.cpp  PolicyAction.h  PolicyAttributesMask.h  PolicyManager.cpp  PolicyManager.h  PolicyMatch.cpp  PolicyMatch.h  PolicyStructs.h  PolicyTerm.cpp  PolicyTerm.h  PolicyUtils.cpp  PolicyUtils.h
neteng/fboss/bgp/cpp/rib/: CanonicalConvert.cpp  CanonicalConvert.h  CanonicalRibBuilder.cpp  CanonicalRibBuilder.h  Fib.h  FibDev.cpp  FibDev.h  FibFboss.cpp  FibFboss.h  FibProgrammingHolddown.cpp  FibProgrammingHolddown.h  LocalRoute.h  RibBase.cpp  RibBase.h  RibCounters.h  RibDC.cpp  RibDC.h  RibEntry.cpp  RibEntry.h  RibFileUtils.h  RibPolicy.cpp  RibPolicy.h  RibPolicyLogger.cpp  RibPolicyLogger.h  RouteFilterConfig.h  RouteInfoFilter.cpp  RouteInfoFilter.h  RouteInfoSelector.cpp  RouteInfoSelector.h  Utils.cpp  Utils.h
neteng/fboss/bgp/cpp/routelib/: RouteBase.h  RouteFilter.cpp  RouteFilter.h  RouteFilterConfig.h  RouteSelector.cpp  RouteSelector.h
neteng/fboss/bgp/cpp/sim/: BgpConfigSummary.cpp  BgpConfigSummary.h  BgpConfigSummaryMain.cpp  BgpPeer.cpp  BgpPeer.h  BgpPeerGroup.cpp  BgpPeerGroup.h  BgpSimulator.cpp  BgpSimulator.h  BgpSimulatorCli.cpp  BgpSimulatorCli.h  BgpSimulatorMain.cpp  BgpSwitch.cpp  BgpSwitch.h  README.md  RoutingTable.cpp  RoutingTable.h  RoutingTableConfig.h  SimRibEntry.cpp  SimRibEntry.h  SimRouteInfo.cpp  SimRouteInfo.h  SimRouteInfoFilter.cpp  SimRouteInfoFilter.h  SimRouteSelector.cpp  SimRouteSelector.h
neteng/fboss/bgp/cpp/stats/: Stats.cpp  Stats.h
neteng/fboss/bgp/cpp/tests/: AdjRibEntryTest.cpp  AdjRibGroupSerializerTest.cpp  AdjRibGroupTest.cpp  AdjRibInBenchmarkTest.cpp  AdjRibInCLITest.cpp  AdjRibInLBWTest.cpp  AdjRibInTest.cpp  AdjRibInUtils.cpp  AdjRibInUtils.h  AdjRibOutBackpressureTest.cpp  AdjRibOutBenchmarkTest.cpp  AdjRibOutDelayBackpressureTest.cpp  AdjRibOutDelayTest.cpp  AdjRibOutNexthopTest.cpp  AdjRibOutPackingTest.cpp  AdjRibOutStructsTest.cpp  AdjRibOutTest.cpp  AdjRibOutUpdateAttributesTest.cpp  AdjRibOutUtils.cpp  AdjRibOutUtils.h  AdjRibPolicyCacheTest.cpp  AdjRibPostPolicyResultCacheTest.cpp  AdjRibPrefixSetTest.cpp  BgpModuleBaseTest.cpp  BgpPathTest.cpp  BgpServiceBaseTest.cpp  BgpServiceTest.cpp  BgpServiceUtilTest.cpp  BgpdDevServerProc.cpp  BgpdDevServerProc.h  BgpdDevServerProcTest.cpp  BoundedWaitUtils.h  BoundedWaitUtilsTest.cpp  BuildInfoTest.cpp  CanonicalPoolRepresentationBenchmark.cpp  CanonicalRibBuilderTest.cpp  ConfigManagerTest.cpp  ConfigPerPeerGracefulRestartTest.cpp  ConfigTest.cpp  ConfigTestFixture.cpp  (+85 more)
neteng/fboss/bgp/cpp/watchdog/: MemProfiler.cpp  MemProfiler.h  MonitorableTrace.h  MonitoredModule.cpp  MonitoredModule.h  MonitoredQueue.h  QueryTree.cpp  QueryTree.h  Watchdog.cpp  Watchdog.h
neteng/fboss/bgp/docs/: README.md
neteng/fboss/bgp/docs/Design_Review/: DesignReview-2025.md
neteng/fboss/bgp/docs/Developer_Guide/: build_bgp++_on_fboss.md  developer_guide.md  run_bgp++_on_eos.md
neteng/fboss/bgp/docs/Features/: AddPath.md  BGP_Policy.md  GracefulRestart.md  UCMP.md
neteng/fboss/bgp/docs/On-Call/: ODS_time_series_usage.md  Qualification_And_Deployment.md  (+2 more)
neteng/fboss/bgp/lib/: defs.py
neteng/fboss/bgp/oss/: validate_cmake_sync.py
openr/common/: NetworkUtil.cpp  NetworkUtil.h
openr/if/: Network.thrift  Platform.thrift
openr/monitor/: SystemMetrics.cpp  SystemMetrics.h
(+415 files in other folders)
